Snowflake destination: update way of read secrets for test